definitions/11-ingress/vproingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vpro-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: a89d155c286494eb5941bf17ffa880d5-c3d88c29e5bfc0bf.elb.us-east-1.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-app
            port:
              number: 8080
      - path: /grafana  # A URL para acessar o Grafana
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
